Added styling to filter pages text and centered meal # in mealpage

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -270,6 +270,17 @@ body {
     font-size: 2em;
 }
 
-.header {
+.filterHeader {
     font-family: 'Lobster', cursive;
+}
+
+.filterButtons {
+    font-family: 'Oxygen', sans-serif;
+}
+
+.button {
+    height: 52px;
+    line-height: 26px;
+    margin: 4% auto;
+    background-color: grey;
 }
