--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -185,7 +185,7 @@ body {
     font-size: 1.5rem;
     float: left;
     box-sizing: border-box;
-    border: 1px solid grey;
+    border: 1px solid rgb(14, 112, 168);
     padding: 2% 0;
 }
 
