--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -225,7 +225,7 @@ body {
     height: 10%;
     width: 100%;
     margin: 0;
-    padding-right: 26px;
+    /* padding-right: 26px; */
     display: flex;
     justify-content: space-around;
     align-items: center;
