Made main container height 80% of the page

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -280,6 +280,12 @@ body {
 .settingsButton{
     margin: 11.4%;
     font-size: 2em;
+    background-color: grey;
+    color: black;
+}
+
+.mainContainer {
+    height: 80%;
 }
 
 .collection {
