--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -150,6 +150,7 @@ body {
     justify-content: space-around;
     align-items: center;
     font-size: 2rem;
+    box-shadow: 0 -4px 5px 0 rgba(0,0,0,0.14), 0 -1px 10px 0 rgba(0,0,0,0.12), 0 -2px 4px -1px rgba(0,0,0,0.3);
 }
 
 .detailsContainer {
