--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -41,7 +41,7 @@ body {
 }
 
 .loginButtons {
-    margin-top: 40%;
+    margin-top: 30%;
     text-align: center;
 }
 
@@ -56,7 +56,7 @@ body {
     display: inline-block;
 }
 
-.validationText1 {
+.validationText1, .validationText2 {
     width: 100%;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 5px;
@@ -66,7 +66,11 @@ body {
     position: absolute;
     bottom: -10%;
     left: 0%;
-    z-index: 1;
+    z-index: 10;
+}
+
+.validationText2 {
+    bottom: -35%;
 }
 
 .inputField {
