grocery list now styled with materialize

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -275,6 +275,10 @@ body {
     text-align: left;
 }
 
+.groceryItem {
+    margin: 5%;
+}
+
 .groceryCheck, .groceryName {
     display: inline-block;
 }
