--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -11,6 +11,7 @@ body {
     height: 100vh;
     width: 100vw;
     margin: 0;
+    overflow: hidden;
 }
 
 .loginContainer {
@@ -346,4 +347,19 @@ body {
 
 .empty {
     width: 5vw;
+}
+
+.phonePls {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 1000000;
+    color: white;
+    background-color: black;
+    font-size: 10vmin;
+}
+
+.phonePls > * {
+    text-align: center;
+    width: 100%;
 }
