Fixed header scrolling issue. New issue of if meals page is scrollable, the modal that pops up now has items on 2nd page of meals list showing

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -100,10 +100,16 @@ body {
 }
 
 .mealsMainArea {
-    height: 100%;
+    position: absolute;
+    top: 10vh;
+    height: 80%;
     width: 100%;
     margin: 0;
     overflow-y: scroll;
+}
+
+.mealsMainArea > .mealsItem:first-of-type {
+    margin-top: 2px;
 }
 
 .mealsItem {
