--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -21,6 +21,7 @@
     justify-content: space-around;
     align-items: center;
     background-color: lightblue;
+    position: relative;
 }
 
 .headerBar * {
