--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -1,6 +1,8 @@
 @font-face {
-    font-family: 'La Belle Aurore';
-    src: local('La Belle Aurore'), url(../fonts/LaBelleAurore.ttf) format('ttf');
+    font-family: 'LaBelleAurore';
+    src: local('LaBelleAurore'), url(../fonts/LaBelleAurore.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .loginContainer {
@@ -18,17 +20,17 @@
 }
 
 .loginLogo {
-    padding-top: 30%;
+    padding-top: 35%;
     display: block;
     margin: 0 auto;
 }
 
 .loginSlogan {
-    font-size: 2rem;
-    text-align: center;
-    margin: 0;
-    padding: 1%;
-    font-family: 'La Belle Aurore';
+    font-size: 2.2rem;
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    font-family: 'LaBelleAurore';
 }
 
 .loginButtons {
