--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -3,7 +3,7 @@
     height: 10%;
     width: 100%;
     margin: 0;
-    background-color: lightblue;
+    background-color: #e65100;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -20,10 +20,14 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: lightblue;
+    background-color: #e65100;
     position: relative;
 }
 
 .headerBar * {
     font-size: 3rem;
+}
+
+.headerLogo {
+    height: 70%;
 }
