--- a/client/src/assets/css/reg-confirm.css
+++ b/client/src/assets/css/reg-confirm.css
@@ -4,6 +4,11 @@
     width: 100vw;
     font-size: 10vmin;
     overflow: hidden;
+    background-image: url('../../assets/images/dingBackground.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: white;
 }
 
 .regConfirmButtonContainer {
