--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -8,6 +8,7 @@
     align-items: center;
     font-size: 2rem;
     bottom: 0;
+    box-shadow: 0 -4px 5px 0 rgba(0,0,0,0.14), 0 -1px 10px 0 rgba(0,0,0,0.12), 0 -2px 4px -1px rgba(0,0,0,0.3);
 }
 
 .headerBar {
