--- a/client/src/assets/css/meals.css
+++ b/client/src/assets/css/meals.css
@@ -4,7 +4,7 @@
     margin: 0;
     text-align: center;
     font-size: 1rem;
-    background-image: url('../../assets/images/dingBackground.jpg');
+    background-image: url('../../assets/images/dingDarkBlur.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -36,29 +36,34 @@
     margin-top: 2px;
 }
 
-.mealsItem, .mealConfirmContainer {
+.mealConfirmContainer {
     height: 20%;
     width: 100%;
     position: relative;
     box-sizing: border-box;
-    border-bottom: 1px solid grey;
 }
 
-.mealsImg {
-    height: 100%;
-    width: 30%;
-    position: absolute;
-    top: 0;
-    left: 0;
+.mealsItem, .mealConfirmContainer {
+    height: 40%;
+    width: 100%;
+    position: relative;
+    box-sizing: border-box;
+}
+
+.mealsItem{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .mealsText {
     font-size: 1.5rem;
     position: relative;
-    left: 30%;
     white-space: pre-wrap;
-    width: 70%;
-    text-align: center;
+    width: 90%;
+    font-weight: bolder;
+    text-shadow: 3px 3px black;
+    bottom: 0%;
 }
 
 .mealsCancel {
@@ -94,7 +99,7 @@
     top: 0;
     left: 0;
     font-family: 'Oxygen', cursive;
-    background-image: url('../../assets/images/dingBackground.jpg');
+    background-image: url('../../assets/images/dingDarkBlur.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -139,12 +144,13 @@
     font-size: 1.5rem;
     float: left;
     box-sizing: border-box;
-    border: 1px solid rgb(14, 112, 168);
+    border: 1px solid #e0e0e0;
     padding: 2% 0;
+    background-color: rgba(40, 40, 40, .9);
 }
 
 .detailsSelectedList {
-    background-color: lightblue;
+    background-color: rgba(230, 81, 0, .9);
 }
 
 .detailsIngredientsList, .detailsInstructionsList, .detailsNutritionList {
@@ -154,6 +160,10 @@
 
 .detailsInstructionsList, .detailsNutritionList {
     display: none;
+}
+
+.collection > .detailsListItem.collection-item {
+    background-color: rgba(40, 40, 40, .9);
 }
 
 .detailsFooter {
