--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -47,11 +47,12 @@
 
 .validationText1, .checkmark {
     display: inline-block;
+    color: black;
 }
 
 .validationText1, .validationText2 {
     width: 100%;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: white;
     border-radius: 5px;
     border: 1px solid lightgrey;
     box-sizing: border-box;
@@ -65,6 +66,7 @@
 
 .validationText2 {
     bottom: -35%;
+    color: black;
 }
 
 .inputField {
