--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -40,3 +40,20 @@
 .footerSelected {
     color: #26a69a;
 }
+
+.loaderModal {
+    position: absolute;
+    z-index: 100;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .7);
+}
+
+.loaderSpinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
