Added new font for header title and margin to next button

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -31,8 +31,8 @@ body {
     overflow: visible;
 }
 
-.lobsterFont {
-    font-family: 'Lobster', cursive;
+.ubuntuFont {
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .oxygenFont {
