--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -27,15 +27,13 @@
 
 .loginSlogan {
     font-size: 2.2rem;
-    position: absolute;
-    top: 40%;
-    left: 20%;
+    margin-top: 1%;
     font-family: 'LaBelleAurore';
 }
 
 .loginButtons {
-    margin-top: 30%;
     text-align: center;
+    margin-top: 5%;
 }
 
 .loginButton, .registerButton {
@@ -43,6 +41,12 @@
     width: 53%;
     margin: 2%;
     font-family: 'Oxygen', sans-serif;
+    text-transform: lowercase;
+    text-shadow: 1px 1px black, 2px 2px black;
+}
+
+.loginButtons > div > .row {
+    margin-top: 5%;
 }
 
 .validationText1, .checkmark {
@@ -64,11 +68,37 @@
     color: black;
 }
 
+.validationText1 div {
+    color: black;
+}
+
 .validationText2 {
     bottom: -35%;
+}
+
+.validationText2 * {
     color: black;
 }
 
 .inputField {
     position: relative;
+}
+
+.inputField label {
+    text-shadow: 1px 1px black, 2px 2px black;
+}
+
+.row > div.inputField > input {
+    background-color: rgba(0, 0, 0, .4);
+    box-shadow: 1px 1px 2px black;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.dingOrange {
+    background-color: #f75211;
+}
+
+.loginSubmit, .registerSubmit {
+    text-shadow: 1px 1px black, 2px 2px black;
 }
