Removed settings and gorcery margin top and added text-shadow to settings button

--- a/client/src/assets/css/settings.css
+++ b/client/src/assets/css/settings.css
@@ -8,14 +8,11 @@
     background-size: cover;
 }
 
-.settingsHeader, .groceryHead{
-    margin: 1.14rem 0 .912rem 0;
-}
-
 .settingsButton{
     margin: 8%;
     font-size: 1.5em;
     color: white;
+    text-shadow: 2px 2px 2px black;
 }
 
 .settingsButton:first-of-type {
