removed next button top margin

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -42,7 +42,7 @@ body {
     height: 52px;
     line-height: 26px;
     margin: 4% auto;
-    background-color: grey;
+    text-shadow: 1px 2px 2px black;
 }
 
 .empty {
