--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -32,3 +32,17 @@
         margin-bottom: 2vh;
     }
 } 
+
+@media screen and (max-height: 568px) {
+    div.mealNumContainer > div.container > div.button-column > a.button {
+        height: 50px;
+    }
+
+    div.mealNumContainer > div.container > div.button-column {
+        margin-top: 3vh !important;
+    }
+
+    div.mealNumContainer > div.container > div.right {
+        margin-top: 3vh !important;
+    }
+}
