--- a/client/src/assets/css/meals.css
+++ b/client/src/assets/css/meals.css
@@ -92,8 +92,8 @@
     overflow-y: scroll;
 }
 
-.detailsMainArea > h3, h5 {
-    text-shadow: 2px 2px 2px black;
+.detailsMainArea > h3, h5, div {
+    text-shadow: 1px 2px 2px black;
 }
 
 .detailsImg {
