--- a/client/src/assets/css/meals.css
+++ b/client/src/assets/css/meals.css
@@ -96,6 +96,11 @@
     text-shadow: 1px 2px 2px black;
 }
 
+div.detailsIngredientsList > ul.collection,
+div.detailsInstructionsList > ul.collection {
+    margin-top: 11vh;
+}
+
 .detailsImg {
     width: 100%;
     border: 1px solid black;
