Changed files to local variants and fixed meals greying out on completion

--- a/client/src/assets/css/meals.css
+++ b/client/src/assets/css/meals.css
@@ -165,3 +165,11 @@ div.detailsInstructionsList > ul.collection {
 .confirmCheck {
     margin-top: 11%;
 }
+
+.mealCompleteGrey {
+    filter: grayscale(100%);
+}
+
+.mealIncomplete {
+    filter: grayscale(0%);
+}
