--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -17,13 +17,16 @@
 .loginContainer *  {
     font-size: 1rem;
     color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .loginLogo {
     padding-top: 35%;
-    display: block;
     margin: 0 auto;
-    height: 40%;
+    width: 80%;
 }
 
 .loginSlogan {
