Added media queries for iphone4 view for diet and allergy section

--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -42,3 +42,9 @@
         margin-top: 4.5vh !important;
     }
 }
+
+@media all and (max-height: 480px) {
+    div.container > div.center-align > div {
+        height: 12vh;
+    }
+}
