--- a/client/src/assets/css/mealNumber.css
+++ b/client/src/assets/css/mealNumber.css
@@ -25,3 +25,13 @@
     background-size: cover;
     color: white;
 }
+
+@media screen and (max-height: 480px) {
+    div.mealNumContainer > div.container > div.center > h4 {
+        font-size: 1.8rem !important;
+    }
+    div.mealNumContainer > div.container > div.button-column > a.button {
+        height: 40px;
+        margin: 2% auto;
+    }
+}
