added settings containers to media queries for iphone 4

--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -44,6 +44,7 @@
 }
 
 @media all and (max-height: 480px) {
+    div.container > div.center-align > div,
     div.container > div.center-align > div {
         height: 12vh;
     }
