--- a/client/src/assets/css/allergy-selection.css
+++ b/client/src/assets/css/allergy-selection.css
@@ -32,12 +32,14 @@
         line-height: 42px;
     }
 
-    div.allergyContainer > div.container > div.right > a > div.container > button {
+    div.allergyContainer > div.container > div.right > a > div.container > button,
+    div.allergySettingsContainer > div.container > div.right > div.container > button {
         height: 8vh;
         line-height: 2vh;
     }
 
-    div.allergyContainer > div.container > div.right {
+    div.allergyContainer > div.container > div.right,
+    div.allergySettingsContainer > div.container > div.right {
         margin-top: 0vh !important;
     } 
 }
