Added media query for landing page login/register iphone4 that changed top padding

--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -119,3 +119,9 @@
     width: 100%;
     justify-content: space-around;
 }
+
+@media screen and (max-height: 480px) {
+    .loginContainer > .loginLogo {
+        padding-top: 5%;
+    }
+}
