--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -69,6 +69,11 @@ body {
 }
 
 @media all and (min-width: 600px) {
+
+    .headerBar {
+        height: 15%;
+    }
+    
     .mainContentContainer {
         display: flex;
         height: 100vh;
