--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -57,3 +57,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+@media all and (min-width: 600px) {
+    .headerBar {
+        height: 15%;
+    }
+}
