Changed px to vh for height

--- a/client/src/assets/css/mealNumber.css
+++ b/client/src/assets/css/mealNumber.css
@@ -61,7 +61,7 @@
     }
 
     .mealNumContainer > .container > .right > .container > button {
-        height: 85px;
+        height: 8.5vh;
         margin-right: 5vh;
     }
     
