Added desktop view for diet section

--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -50,3 +50,32 @@
     }
 }
 
+@media all and (min-height: 600px) {
+    .dietContainer {
+        width: 60%;
+    }
+
+    .dietContainer > .container > .center > .card-content {
+        font-size: 1.7rem !important;
+    }
+
+    .dietContainer > .container > .center-align > div > a {
+        width: 40vh;
+        padding: 0;
+        margin: 1vh;
+        font-size: .7rem;
+    }
+
+    .btn-desk > div {
+        margin-top: .5vh;
+    }
+
+    .btn-desk > div > div {
+        line-height: 3.3vh;
+    }
+
+    .dietContainer > .container > .right > a > .container > button {
+        height: 8.5vh;
+        margin-right: 5vh;
+    }
+}
