--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -15,7 +15,8 @@ body {
     height: 100vh;
     width: 100vw;
     margin: 0;
-    overflow: hidden;
+    min-height: 100vh;
+    max-height: 100vh;
 }
 
 .iconcolor {
