--- a/client/src/assets/css/settings.css
+++ b/client/src/assets/css/settings.css
@@ -34,3 +34,41 @@
     flex-flow: column nowrap;
     justify-content: space-around;
 }
+
+.filterModalBackdrop{
+    background-color: rgba(0, 0, 0, .4);
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.filterModal {
+    height: 300px;
+    width: 300px;
+    border-radius: 10px;
+    background-color: #757575;
+    border: 2px solid #ff5e1f;
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.filterModal h4 {
+    color: white;
+    text-shadow: 0;
+    text-align: center;
+}
+
+.filterModalButtons {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
