--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -8,10 +8,13 @@
 .loginContainer {
     height: 100%;
     width: 100%;
-    background-image: url('../../assets/images/dingBackground.jpg');
+    background-image: url('../../assets/images/dingHDBack.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     margin: 0;
+    position: relative;
+    z-index: 0;
 }
 
 .loginContainer *  {
@@ -21,6 +24,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 0;
+}
+
+.loginDarken {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 50%;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, 0));
+    pointer-events: none;
+    z-index: -1;
 }
 
 .loginLogo {
