Updated all pages with new background image, dark+blur

--- a/client/src/assets/css/settings.css
+++ b/client/src/assets/css/settings.css
@@ -3,7 +3,8 @@
     height: 100%;
     width: 100%;
     text-align: center;
-    background-image: url('../../assets/images/dingDarkBlur.jpg');
+    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -16,14 +17,16 @@
 
 .dietSettingsContainer {
     height: 100vh;
-    background-image: url('../../assets/images/dingDarkBlur.jpg');
+    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .allergySettingsContainer {
     height: 100vh;
-    background-image: url('../../assets/images/dingDarkBlur.jpg');
+    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
