--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -4,7 +4,8 @@
 
 .dietContainer {
     height: 100vh;
-    background-image: url('../../assets/images/dingDarkBlur.jpg');
+    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
