--- a/client/src/assets/css/meals.css
+++ b/client/src/assets/css/meals.css
@@ -4,7 +4,8 @@
     margin: 0;
     text-align: center;
     font-size: 1rem;
-    background-image: url('../../assets/images/dingDarkBlur.jpg');
+    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
@@ -73,7 +74,8 @@
     top: 0;
     left: 0;
     font-family: 'Oxygen', cursive;
-    background-image: url('../../assets/images/dingDarkBlur.jpg');
+    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
