--- a/client/src/assets/css/reg-confirm.css
+++ b/client/src/assets/css/reg-confirm.css
@@ -4,7 +4,8 @@
     width: 100vw;
     font-size: 10vmin;
     overflow: hidden;
-    background-image: url('../../assets/images/dingDarkBlur.jpg');
+    background-image: url('../../assets/images/dingHDBack_Dark.jpg');
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
