--- a/client/src/assets/css/meals.css
+++ b/client/src/assets/css/meals.css
@@ -175,6 +175,10 @@ div.detailsInstructionsList > ul.collection {
 }
 
 @media all and (min-width: 600px) {
+    .mealsContainer {
+        width: 60%;
+    }
+    
     .mealsContainer > .headerBar,
     .mealsContainer > .mealsMainArea > .detailsContainer > .headerBar {
         height: 10%;
