--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -41,7 +41,41 @@
     color: #26a69a;
 }
 
-.loaderModal {
+.errorModalContent {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;           
+    background-color: #f75211e7;            
+    top: 47%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    height: 38%;
+    border-radius: 50%;
+    border: 2px solid white;
+    color: white;
+}
+
+.errorCloseContent {
+    position: absolute;
+    bottom: 0;
+    font-size: 1.5rem;
+    padding-bottom: 12%;
+    width: 100%;
+    text-shadow: 2px 3px 2px black;
+    color: white;
+}
+
+.errorText {
+    margin-bottom: 4vh;
+    margin-top: 3vh;
+    font-size: 1.5rem;
+    padding: 0 7%;
+    color: white;
+}
+
+.loaderModal, .errorModal {
     position: absolute;
     z-index: 100;
     height: 100vh;
@@ -62,4 +96,19 @@
     .headerBar {
         height: 15%;
     }
+
+    .errorModalContent {
+        top: 42%;
+        width: 27%;
+        height: 49%;
+    }
+
+    .errorText {
+        font-size: 1.2rem;
+    }
+
+    .errorCloseContent {
+        padding-bottom: 7%;
+    }
+
 }
