commented out padding for meal number page so that the numbers are centered

--- a/client/src/assets/css/mealNumber.css
+++ b/client/src/assets/css/mealNumber.css
@@ -48,7 +48,7 @@
     .mealNumContainer > .container > .button-column > .button {
         height: 10vh;
         margin: 3vh .5vw;
-        padding: 0 1.3rem;
+        /* padding: 0 1.3rem; */
     }
 
     .mealNumContainer {
