--- a/client/src/assets/css/settings.css
+++ b/client/src/assets/css/settings.css
@@ -75,3 +75,129 @@
     display: flex;
     justify-content: space-around;
 }
+
+@media only screen and (min-width: 992px) {
+    .collection {
+        display: flex;
+        flex-direction: row;   
+        flex-wrap: wrap;
+        justify-content: center;   
+    }
+
+    .btn-desk > div {
+        text-align: center;
+        margin-top: 4vh;
+    }
+
+    .button {
+        height: 10vh;
+        width: 20vh;
+        margin: 3vh 1vw;
+    }
+
+    .title-container {
+        margin-bottom: 2vh;
+    }
+} 
+
+@media screen and (max-height: 568px) {
+    div.mealNumContainer > div.container > div.button-column {
+        margin-top: 5vh !important;
+    }
+
+    div.mealNumContainer > div.container > div.right {
+        margin-top: 4.5vh !important;
+    }
+}
+
+@media all and (max-height: 480px) {
+    div.container > div.center-align > div,
+    div.container > div.center-align > div {
+        height: 12vh;
+    }
+}
+
+@media all and (min-height: 600px) {
+    .dietSettingsContainer {
+        width: 60%;
+    }
+
+    .dietSettingsContainer > .container > .center > .card-content {
+        font-size: 1.5rem !important;
+    }
+
+    .dietSettingsContainer > .container > .center-align > div > a {
+        width: 40vh;
+        padding: 0;
+        margin: 1vh;
+        font-size: .7rem;
+    }
+
+    .btn-desk > div {
+        margin-top: .5vh;
+    }
+
+    .btn-desk > div > div {
+        line-height: 3.3vh;
+    }
+
+    .dietSettingsContainer > .container > .right > a > .container > button {
+        height: 8.5vh;
+        margin-right: 5vh;
+    }
+}
+
+@media screen and (max-height: 568px) {
+    div.allergyContainer > div.container > div.row > div > a.btn-large,
+    div.allergySettingsContainer > div.container > div.row > div > a.btn-large {
+        height: 46px;
+        line-height: 46px;
+    }
+}
+
+@media all and (max-height: 480px) {
+    div.allergyContainer > div.container > div.row > div > a.btn-large,
+    div.allergySettingsContainer > div.container > div.row > div > a.btn-large {
+        height: 41px;
+        line-height: 42px;
+    }
+
+    div.allergyContainer > div.container > div.right > a > div.container > button,
+    div.allergySettingsContainer > div.container > div.right > div.container > button {
+        height: 8vh;
+        line-height: 2vh;
+    }
+
+    div.allergyContainer > div.container > div.right,
+    div.allergySettingsContainer > div.container > div.right {
+        margin-top: 0vh !important;
+    } 
+}
+
+@media all and (min-width: 600px) {
+    .allergyContainer, .allergySettingsContainer {
+        width: 60%;
+    }
+    
+    div.allergyContainer > div.container > div.row > div > a.btn-large,
+    div.allergySettingsContainer > div.container > div.row > div > a.btn-large {
+        height: 6.9vh;  
+        margin: 1vh .5vh;      
+    }
+    
+    .allergyContainer > .container > .row > div > .btn-desk > div > div.title-container,
+    .allergySettingsContainer > .container > .row > div > .btn-desk > div > div.title-container {
+        line-height: 5.5vh;
+    }
+
+    .allergyContainer > .container > .center > .card-content,
+    .allergySettingsContainer > .container > .center > .card-content {
+        font-size: 1.8rem;
+    }
+
+    .allergyContainer > .container > .right > a > .container > button,
+    .allergySettingsContainer > .container > .right > .container > button {
+        height: 8.5vh;
+        margin-right: 5vh;
+    }
+}
