Changed media query to min-width instead of min-height

--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -51,7 +51,7 @@
     }
 }
 
-@media all and (min-height: 600px) {
+@media all and (min-width: 600px) {
     .dietContainer {
         width: 60%;
     }
