--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -17,6 +17,24 @@ body {
     margin: 0;
     min-height: 100vh;
     max-height: 100vh;
+    /* background-image: url('../../assets/images/dingHDBack.jpg'); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.desktop-gutter {
+    /* background-image: url('../../assets/images/dingHDBack.jpg'); */
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.gutter-left {
+    background-position: left;
+}
+
+.gutter-right {
+    background-position: right;
 }
 
 .iconcolor {
